--- a/src/RizzyUI.Docs/wwwroot/css/app.css
+++ b/src/RizzyUI.Docs/wwwroot/css/app.css
@@ -260,6 +260,10 @@
     --color-warning-foreground: var(--warning-foreground);
     --color-success: var(--success);
     --color-success-foreground: var(--success-foreground);
+    --scrollbar-track: var(--color-border);
+    --scrollbar-thumb: var(--color-muted-foreground);
+    --scrollbar-width: 8px;
+    --scrollbar-radius: 4px;
   }
 }
 @layer base {
@@ -504,6 +508,9 @@
   }
   .right-2 {
     right: calc(var(--spacing) * 2);
+  }
+  .right-3 {
+    right: calc(var(--spacing) * 3);
   }
   .right-4 {
     right: calc(var(--spacing) * 4);
@@ -1699,9 +1706,6 @@
   .overflow-hidden {
     overflow: hidden;
   }
-  .overflow-scroll {
-    overflow: scroll;
-  }
   .overflow-visible {
     overflow: visible;
   }
@@ -1716,6 +1720,9 @@
   }
   .overflow-y-hidden {
     overflow-y: hidden;
+  }
+  .overflow-y-scroll {
+    overflow-y: scroll;
   }
   .rounded {
     border-radius: 0.25rem;
@@ -9755,6 +9762,8 @@ pre:has(> code) {
   --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
   --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
   --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+  --scrollbar-track: var(--color-border);
+  --scrollbar-thumb: var(--color-muted-foreground);
 }
 @layer base {
   * {
@@ -9774,7 +9783,7 @@ pre:has(> code) {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
-  .scrollbar {
+  body, .scrollbar {
     scrollbar-width: thin;
     scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
     &::-webkit-scrollbar {
